--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="city-box">
         <label>City:</label>
         <div class="select-box">
-            <select>
+            <select name="cityselection">
               <!-- <option hidden>Country</option> -->
               <option>Toronto</option>
               <option>Montreal</option>
