--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </nav>
 
  <header>
-        <h1>Realtime Fitness Gym</h1>
-        <p>Your path to a healthier lifestyle starts here!</p>
+        <h1 style="color: black;">Realtime Fitness Gym</h1>
+        <p style="color: black;">Your path to a healthier lifestyle starts here!</p>
     </header>
   <div class="intro-container">
         <p class="intro-text">Welcome to Realtime Fitness, where we are dedicated to helping you achieve your fitness goals and lead a healthy lifestyle. Our state-of-the-art gym facilities and expert trainers are here to support you every step of the way.</p>
