--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            
             <input type="text" class="text-input" placeholder="Search...">
             <span id="search-error-message" class="feedback-message">Invalid search query.</span>
-            <button>Search</button>
+            <button style="background-color: blue;">Search</button>
         </div>
     </nav>
 
