--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
               </div>
             </fieldset>
-              <button type="submit">Submit</button>
+              <button type="submit" style="background-color: blue;">Submit</button>
       </form>
     </section>
     <script src="script.js"></script>
