--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
         <div class="state-box">
             <label>State:</label>
             <div class="select-box">
-                <select>
-                  <!-- <option hidden>Country</option> -->
+                <select name="selectProvince">
                   <option>Ontario</option>
                   <option>Winnipeg</option>
 
