--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="city-box">
         <label>City:</label>
         <div class="select-box">
-            <select class="cityselection">
+            <select aria-label="City">
               <option>Toronto</option>
               <option>Montreal</option>
               <option>Calgery</option>
@@ -156,7 +156,7 @@
         <div class="state-box">
             <label>State:</label>
             <div class="select-box">
-                <select name="selectProvince">
+                <select aria-label="Province"">
                   <option>Ontario</option>
                   <option>Winnipeg</option>
 
